# demo_repo

./: LICENSE  README.md  index.html  pyproject.toml  setup.py
src/multiply/: __init__.py
test/: test.py
